package primerEjercicio;

public class Pixel {
    private char[][] elementos;

    private char[][] listaElementos() {
        return elementos;
    }
}