package segundoEjercicio;

public class ColoresCompuestos {
    private char[][] colores;

    private char[][] listaColores() {
        return colores;
    }
}