package segundoEjercicio;

public class Frame1 {
    private char[][] contenido;

    private void posicionFrame(Pixel pixel, ColoresCompuestos colores) {
        contenido = pixel.listaElementos();
    }
}
