@startuml
class Pantalla {
  -String class
  -GetFrame()
}

class Buffer {
  -mostrarFrameEscogido(Frame1, Frame2, ResultadoVisual)
}

class Pixel {
  -char[][] 
  ListaElementos()
}

class Frame1 {
  -char[][]
  PosicionFrame(Pixel, ColoresCompuestos)
}

class Frame2 {
  -char[][]
  PosicionFrame(Pixel, ColoresCompuesto)
}

class ResultadoVisual {
  -char[][]
  combinar(Frame1, Frame2)
}

class ColoresCompuestos {
  -char[][]
  ListaColores()
}

Pantalla --> Buffer
Buffer --> Frame1
Buffer --> Frame2
Buffer --> ResultadoVisual
Frame1 --> ResultadoVisual
Frame2 --> ResultadoVisual
Pixel --> Frame1
Pixel --> Frame2
ColoresCompuestos --> Frame1
ColoresCompuestos --> Frame2
@enduml